--- a/style.css
+++ b/style.css
@@ -3,3 +3,121 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: sans-serif;
+    background: linear-gradient(to top, rgb(224, 139, 12), rgb(243, 222, 31));
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.clock {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    background-color: rgba(255,255,255, .8);
+    border-radius: 50%;
+    border: 2px solid rgb(12, 12, 12);
+}
+
+.clock .number {
+    --rotation:0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    font-size: 1.7rem;
+    text-align: center;
+    transform: rotate(var(--rotation));
+}
+
+.clock .number1 {
+    --rotation:30deg
+}
+
+.clock .number2 {
+    --rotation:60deg
+}
+
+.clock .number3 {
+    --rotation:90deg
+}
+
+.clock .number4 {
+    --rotation:120deg
+}
+
+.clock .number5 {
+    --rotation:150deg
+}
+
+.clock .number6 {
+    --rotation:180deg
+}
+
+.clock .number7 {
+    --rotation:210deg
+}
+
+.clock .number8 {
+    --rotation:240deg
+}
+
+.clock .number9 {
+    --rotation:270deg
+}
+
+.clock .number10 {
+    --rotation:300deg
+}
+
+.clock .number11 {
+    --rotation:330deg
+}
+
+
+.clock .hand {
+    --rotation: 0;
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    border: 1px solid #fff;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    z-index: 10;
+    transform-origin: bottom; 
+    transform: translateX(-50%) rotate(calc(var(--rotation) * 1deg));
+}
+
+.clock::after {
+    content: '';
+    position: absolute;
+    background-color: rgb(10, 10, 10);
+    z-index: 11;
+    width: 15px;
+    height: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius:50%;
+}
+
+.clock .hand.second {
+    width: 4px;
+    height: 45%;
+    background-color: rgba(255, 0, 0, 0.829);
+}
+
+.clock .hand.minute {
+    width: 7px;
+    height: 38%;
+    background-color: rgb(10, 10, 10);
+}
+
+.clock .hand.hour {
+    width: 10px;
+    height: 33%;
+    background-color: rgb(12, 11, 11);
+}
